# FakeBoy

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/: AddressMaper.hpp  AddressMapper.hpp  CPU.hpp  CPURegisters.hpp  Cartridge.hpp  EchoRAM.hpp  HighRAM.hpp  MBCBase.hpp  Memory.hpp  MemoryBus.hpp  MemoryMap.hpp  NoMBC.hpp  Opcodes.hpp  Registers.hpp  VideoRAM.hpp  WorkingRAM.hpp  WorkingRam.hpp
src/: CPU.cpp  CPURegisters.cpp  Cartridge.cpp  EchoRAM.cpp  MBCBase.cpp  Memory.cpp  MemoryBus.cpp  NoMBC.cpp  Registers.cpp
test/: test_MemoryBus.cpp  test_Register.cpp
test/test_CPU/: test_INC_R.cpp  test_LDD_LDI_A_HL.cpp  test_LDH_A_addressU8.cpp  test_LDI_LDD_HL_A.cpp  test_LD_LDI_A_HL.cpp  test_LD_RR_u16.cpp  test_LD_R_R.cpp  test_LD_R_u8.cpp  test_LD_SP_HL.cpp  test_LD_addressHL_u8.cpp  test_LD_addressRR_R.cpp  test_LD_addressU16_A.cpp  tests_LDD_LDI_HL_A.cpp  tests_LD_R_addressRR.cpp
test/test_CPU/TestingCPU/: TestingCPU.cpp  TestingCPU.hpp  TestingMemoryBus.cpp  TestingMemoryBus.hpp
test/test_CPU/commons/: TestHeaders.hpp
test/test_CPU/test_ADC/: test_ADC_A_R.cpp  test_ADC_A_addressHL.cpp  test_ADC_A_u8.cpp
test/test_CPU/test_ADD/: test_ADD_A_R.cpp  test_ADD_A_addressHL.cpp  test_ADD_A_u8.cpp  test_ADD_HL_RR.cpp
test/test_CPU/test_AND/: test_AND_A_R.cpp  test_AND_A_addressHL.cpp  test_AND_A_u8.cpp  test_AND_R_R.cpp
test/test_CPU/test_CALL/: test_CALL_CF_u16.cpp  test_CALL_u16.cpp
test/test_CPU/test_CP/: test_CP_A_R.cpp  test_CP_A_addressHL.cpp  test_CP_A_u8.cpp
test/test_CPU/test_DEC/: test_DEC_R.cpp  test_DEC_RR.cpp  test_DEC_addressHL.cpp
test/test_CPU/test_INC/: test_INC_R.cpp  test_INC_RR.cpp  test_INC_addressHL.cpp
test/test_CPU/test_JP/: test_JP_C_u16.cpp  test_JP_HL.cpp  test_JP_NC_u16.cpp  test_JP_NZ_u16.cpp  test_JP_Z_u16.cpp
test/test_CPU/test_JR/: test_JR_C_i8.cpp  test_JR_NC_i8.cpp  test_JR_NZ_i8.cpp  test_JR_Z_i8.cpp  test_JR_i8.cpp
test/test_CPU/test_LD/: test_LDH_A_addressU8.cpp  test_LDH_addressU8_A.cpp  test_LDI_LDD_A_HL.cpp  test_LDI_LDD_HL_A.cpp  test_LD_A_addressC.cpp  test_LD_A_addressU16.cpp  test_LD_RR_u16.cpp  test_LD_R_R.cpp  test_LD_R_addressRR.cpp  test_LD_R_u8.cpp  test_LD_SP_HL.cpp  test_LD_addressC_A.cpp  test_LD_addressHL_u8.cpp  test_LD_addressRR_R.cpp  test_LD_addressU16_A.cpp  test_LD_addressU16_SP.cpp
test/test_CPU/test_OR/: test_OR_A_R.cpp  test_OR_A_u8.cpp  test_OR_addressHL.cpp
test/test_CPU/test_POP/: test_POP_RR.cpp
test/test_CPU/test_PUSH/: test_PUSH_RR.cpp
test/test_CPU/test_SBC/: test_SBC_A_R.cpp  test_SBC_A_addressHL.cpp  test_SBC_A_u8.cpp
test/test_CPU/test_SUB/: test_SUB_A_R.cpp  test_SUB_A_addressHL.cpp  test_SUB_A_u8.cpp
test/test_CPU/test_XOR/: test_XOR_A_R.cpp  test_XOR_A_addressHL.cpp  test_XOR_A_u8.cpp
test/test_Cartridge/: test_GeneralCartridge.cpp  test_NoMBC_Cartridge.cpp  test_NoMBC_NoRAM_Cartridge.cpp
test/test_Cartridge/testingCartridges/: NoMBC_NoRAM_ROM.asm  NoMBC_ROM.asm
test/testingCartridges/: NoMBC_LDI_LDD_A_HL_Test_ROM.asm  NoMBC_LDI_LDD_HL_A_Tests_ROM.asm  NoMBC_LD_RR_u16_Test_ROM.asm  NoMBC_LD_R_R_Test_ROM.asm  NoMBC_LD_R_addressRR_Test_ROM.asm  NoMBC_LD_R_u8_Test_ROM.asm  NoMBC_LD_addressHL_u8_Test_ROM.asm  NoMBC_LD_addressRR_R_Test_ROM.asm  NoMBC_LD_addressU16_A_Test_ROM.asm  NoMBC_NoRAM_ROM.asm  NoMBC_ROM.asm  test_ADC_A_R_ROM.asm  test_ADC_A_addressHL_ROM.asm  test_ADC_A_u8_ROM.asm  test_ADD_A_R_ROM.asm  test_ADD_A_addressHL_ROM.asm  test_ADD_A_u8_ROM.asm  test_ADD_HL_RR_ROM.asm  test_AND_A_R_ROM.asm  test_AND_A_addressHL_ROM.asm  test_AND_A_u8_ROM.asm  test_AND_R_R_ROM.asm  test_CALL_CF_u16_ROM.asm  test_CALL_u16_ROM.asm  test_CP_A_R_ROM.asm  test_CP_A_addressHL_ROM.asm  test_CP_A_u8_ROM.asm  test_DEC_RR_ROM.asm  test_DEC_R_ROM.asm  test_DEC_addressHL_ROM.asm  test_INC_RR_ROM.asm  test_INC_R_ROM.asm  test_INC_addressHL_ROM.asm  test_JP_C_u16_ROM.asm  test_JP_HL_ROM.asm  test_JP_NC_u16_ROM.asm  test_JP_NZ_u16_ROM.asm  test_JP_Z_u16_ROM.asm  test_JR_C_i8_ROM.asm  test_JR_NC_i8_ROM.asm  (+35 more)
test/testingCartridges/commons/: header.asm
